src/components/component.css
@import "tailwindcss/base";

@font-face {
  font-family: "mont";
  src: url("./../fonts/Mont-HeavyDEMO.eot") format("eot"),
    url("./../fonts/Mont-HeavyDEMO.woff") format("woff"),
    url("./../fonts/Mont-HeavyDEMO.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family:  "brandan";
  src: url("./../fonts/BrandonRegular.otf") format("opentype")
}

@font-face {
  font-family:  "brandanbold";
  src: url("./../fonts/Barbold.ttf") format("truetype")
}
@import "tailwindcss/components";

/********************** Extended Classes **********************/

.list-container {
  @apply inline-flex flex-col h-full;
}

.list-container li {
  min-height: 5rem;
  @apply list-none block;
}

.list-container > li:last-child {
  margin-bottom: 0 ;
  min-height: auto;
}

.heading-title {
  @apply font-display text-3xl;
}

.sub-services-links a {
  @apply inline-block text-gray-200;
}

.sub-services-links span {
  @apply mr-3  text-gray-200;
}

.link-button {
  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  position: relative;
  display: inline-block;
  @apply font-display lowercase;
}

.link-button::before{
  content: '';
  position: absolute;
  height: 3px;
  background-color: #5466ff;
  left: 0;
  width: 0px;
  top: calc(50% - 3px);
  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);

}

.link-button:hover{
  padding-left: 20px;
}

.link-button:hover::before{
  width: 15px;

}
.secondary-title {
  @apply block font-display;
}

.primary-title {
  @apply block font-display text-3xl;
}

.list-container li > a {
  @apply font-display block;
}

.section-title {
  @apply font-display text-4xl;
}

/********************** General Styles **********************/

body {
  overflow-x: hidden;
  font-size: 16px;
  @apply font-body
}

section {
  min-height: 40rem;
}

.header-overlay .heading-title {
  font-size: 4vw;
}

nav {
  overflow: hidden;
}

nav ul{
  overflow-y: hidden;
  overflow-x: auto;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;

}

nav ul::-webkit-scrollbar {
  display: none;
}




/********************** Home About Us **********************/

.animation-slide-text {
  font-size: 8vw;
  line-height: 9vw;
}

/********************** Form **********************/

.w-47-p {
  width: 47%;
}

form input,
form textarea {
  border-color: rgba(255, 255, 255, 0.25);
}

.send-button {
  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  position: relative;
  display: inline-block;
  @apply font-display lowercase;
}

.send-button::before{
  content: '';
  position: absolute;
  height: 3px;
  background-color: white;
  left: 0;
  width: 0px;
  top: calc(50% - 3px);
  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);

}

.send-button:hover{
  padding-left: 20px;
}

.send-button:hover::before{
  width: 15px;

}

/********************** Home Header Overlay **********************/

.header-overlay {
  margin-top: -101px;
  min-height: 100vh;
}

/********************** Fixed & Horizontal Slider **********************/

.fixed-slider .horizontal-scene,
.horizontal-slider .horizontal-scene {
  min-height: 100vh;
  width: 100%;
  position: sticky;
  top: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  align-items: center;
  padding: 40px 0;
}

.slide-card:hover .card-arrow{
  opacity: 1;
  transform: translate(0px, 0px)rotate(135deg);
  
}

.card-arrow{
  margin-left: 1rem;
  transition:  all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  opacity: 0;
  transform: translate(-20px, 20px)rotate(135deg);
}

.fixed-slider .container,
.horizontal-slider .container {
  margin: auto;
  position: relative;
}

.fixed-slider .slider-slides {
  position: absolute;
  top: auto;
  bottom: 0;
}

.fixed-slider .slider-paginator {
  position: absolute;
  top: 0;
  bottom: auto;
  right: 1rem;
}

.horizontal-slider .h-slide {
  width: 500px;
  padding: 2rem 4rem;
}

.horizontal-slider.dark .h-slides-container{
  position: relative;
}

.horizontal-slider.dark .h-slides-container::after{
  position: absolute;
  content: '';
  width: 100%;
  height: 1px;
  background-color: white;
  bottom: 9.5rem;
  left: 0;
}

.h-slide figure img {
  width: 55%;
}

.slide-card {
  background-color: #f6f7ff;
  width: 600px;
  padding: 50px 86px 50px 60px;
  display: flex;
  align-items: flex-start;
  flex-shrink: 0;
  text-decoration: none;
  position: relative;
  margin-left: 50px;
  overflow: hidden;
}

.slide-card::after {
  content: "";
  width: 100%;
  height: 100%;
  bottom: 0;
  left: 0;
  position: absolute;
  background-color: black;
  transform: translateY(100%);
  transition: all 0.3s linear;
}

.dark .slide-card::after{
  background-color: #5466ff;
}

.slide-card.active::after {
  transform: translateY(0);
}

.slide-card:first-child {
  margin-left: 0;
}

.slide-card figure {
  margin-right: 20px;
}

.slide-card figure,
.slide-card .slide-card-body {
  transform: translateY(110px);
  position: relative;
  z-index: 1;
  transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.slide-card .slide-card-body .hidden-text {
  opacity: 0;
}

.slide-card figure img {
  width: 45px;
  max-width: initial;
}

.slide-card p {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.56;
}

.slide-card strong {
  font-size: inherit;
  font-weight: inherit;
}

.slide-card figure .icon-active {
  display: none;
}

.slide-card.active figure,
.slide-card.active .slide-card-body {
  transform: translateY(0px);
}

.slide-card.active h3,
.slide-card.active p {
  color: white;
  transition-delay: .1s;
}

.slide-card.active p {
  color: rgba(255,255,255,.8);
}

.slide-card.active .slide-card-body .hidden-text {
  opacity: 1;
}

.slide-card.active figure .icon-active {
  display: block;
}
.slide-card.active figure .icon-base {
  display: none;
  transition-delay: .2s;
}

/********************** Circle Slider **********************/

.translatex-25 {
  transform: translateX(-25%);
}

.circle-slider .inner-circle {
  border-radius: 50%;
  transition: all 0.5s ease-in-out;
  /* transition-delay: 0.25s; */
  background-color: #5564f6 !important;
}

.inner-circle img {
  opacity: 0;
}

.inner-circle.active img {
  opacity: 1;
}

.inner-circle.active {
  border: 1px solid rgba(0,0,0, .2);
  background-color: #f6f7ff!important;
  overflow: hidden;
}

.circle-slider .inner-circle:not(.active) {
  transform: scale(0.02);
}

.circle-slider .title-block > span {
  font-size: 13rem;
  width: 15rem;
  line-height: 13rem;
}

.processBlock__navSteps {
  padding: 3px 4.16667vw 0 12px;
  position: relative;
}

.prevNextBttn {
  display: flex;
  justify-content: center;
  outline: none;
  align-items: center;
  width: 60px;
  height: 60px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1);
  margin-bottom: 2rem;
}

.prevNextBttn__bg,
.prevNextBttn__circle {
  position: absolute;
  width: 100%;
  height: 100%;
  outline: none;
  top: 0;
  left: 0;
  will-change: transform;
}

.prevNextBttn__bg {
  transform: scale(0);
  outline: none;
  transition: transform 0.3s cubic-bezier(0.19, 1, 0.22, 1);
  will-change: transform;
  background: #000;
  border-radius: 100%;
}

.prevNextBttn__circle {
  transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1),
    opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1);
  will-change: transform;
  outline: none;

}

.prevNextBttn.top .prevNextBttn__arrow {
  transform: rotate(180deg);
}

.prevNextBttn.bottom .prevNextBttn__arrow {
  transform: rotate(360deg);
}
svg:not(:root) {
  overflow: hidden;
}
.prevNextBttn__arrow {
  width: 50%;
}
.prevNextBttn__arrow path {
  transition: fill 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
  will-change: fill;
}

.prevNextBttn:hover .prevNextBttn__bg {
  transform: scale(1);
  transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1);
}

.prevNextBttn:hover .prevNextBttn__circle {
  opacity: 0;
  transform: scale(1.5);
  transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1),
    opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

.prevNextBttn:hover .prevNextBttn__arrow path {
  fill: #fff;
  transition: fill 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
}

/********************** Canvas Overlay **********************/

.canvas-overlay {
  height: 300vh;
}

.canvas-overlay .overlay-text{
  font-size: 13vw;
}
.canvas-overlay text {
  text-anchor: middle;
}
.canvas-overlay #base {
  mask: url(#mask);
  fill: white;
}

.canvas-overlay #alpha {
  fill: white;
}

.text-animation-container {
  padding-top: 3rem;
  padding-bottom: 27rem;
}

/********************** 404 Page **********************/

.not-found .container {
  font-size: 45vw;
}

@import "tailwindcss/utilities";

/********************** Media Query 767 **********************/

@media only screen and (max-width: 767px) {
  .header-overlay {
    margin-top: -75px;
  }
  .header-overlay .heading-title{
    font-size: 8vw;
  }
  .canvas-overlay {
    height: 200vh;
  }
  .form-controls input {
    width: 100%;
  }
  .fixed-slider .slider-slides {
    position: static;
  }
  .slide-card {
    width: auto;
    padding: 1rem;
    margin-left: 0;
    flex-direction: column;
    margin-bottom: 2.5rem;
    /* align-items: center; */
  }
  .slide-card figure {
    margin-right: 0;
  }
  .slide-card figure img{
    width: 15vw;
  }
  .horizontal-slider .h-slide{
    width: 400px;
    padding: 2rem;
  }

  .horizontal-scene .container{
    max-width: 100%;
  }

  .fixed-slider .slider-title-wrapper .section-title {
    opacity: 1;
  }

  .link-button{
    padding-left: 20px;
    color: #5466ff;
  }

  .card-arrow{
    opacity: 1;
    transform: translate(0px, 0px)rotate(135deg);
  }

  .prevNextBttn{
    width: 45px;
    height: 45px;
  }
  
  .link-button::before{
    width: 15px;
  
  }

  .canvas-overlay {
    height: 100vh;
  }

  .list-container li {
    min-height: auto;
  }

  .send-button{
    padding-left: 20px;
  }
  
  .send-button::before{
    width: 15px;
  
  }
}

